--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -9,23 +9,45 @@
     margin: 30px;
 }
 .contact > .main-card{
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.25);
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
     width: 70vw;
     max-width: 900px;
     justify-self: center;
     justify-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.main-card > p{
+    font-size: 0.9em;
+    padding-top: 15px;
+    letter-spacing: 1px;
+    text-align: center;
+}
+.main-card p > a {
+    font-weight: 600;
+    text-decoration: none;
+    color: black;
+    opacity: 0.5;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.main-card p > a:hover{
+    opacity: 1;
 }
 .contact .main-card > form{
     width: 80%;
-    padding: 25px 0;
+    padding: 10px 0;
     margin-bottom: 150px;
 }
 form > div{
     display: grid;
     min-height: 50px;
     grid-template-columns: 25% 75%;
-    margin: 25px 0;
+    margin-top: 50px;
+}
+form > div:nth-child(1){
+    margin-top: 15px;
 }
 form label{
     height: 32px;
@@ -62,11 +84,30 @@ form button{
     cursor: pointer;
     transition: 0.2s;
     font-size: 1.1em;
+    color: black;
+    font-weight: 400;
 }
 form button:hover{
     background: rgba(255, 255, 255, 0.7);
     font-size: 1.2em;
     letter-spacing: 1px;
+}
+form .error{
+    margin: 0;
+    margin-left: 225px;
+    font-style: italic;
+    color: red;
+}
+form .submit-msg{
+    text-align: center;
+    font-size: 2em;
+    font-weight: 600;
+}
+form .submit-error{
+    text-align: center;
+    font-size: 2em;
+    font-weight: 600;
+    color: red;
 }
 @media (max-width: 800px){
     .contact > h1{
@@ -74,6 +115,9 @@ form button:hover{
     }
     .contact > .main-card{
         width: 90vw;
+    }
+    .main-card > p{
+        font-size: 0.85em;
     }
     .contact .main-card > form{
         width: 95%;
@@ -91,5 +135,8 @@ form button:hover{
     }
     form textarea{
         font-size: 0.9em;
+    }
+    form .error{
+        margin-left: 30vw;
     }
 }
