--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,7 +2,7 @@
     justify-self: center;
     margin-top: 100px;
 }
-.home button{
+.home .button{
     background: rgba(255, 255, 255, 0.2);
     border: 1px solid #000000;
     border-radius: 50px;
@@ -17,13 +17,18 @@
     cursor: pointer;
     z-index: 1;
     transition: 0.2s;
+    text-decoration: none;
+    text-align: center;
+    align-content: center;
 }
-.home button:hover{
+.home .button:hover{
     background: rgba(255, 255, 255, 0.5);
     font-size: 1.2em;
     letter-spacing: 1px;
 }
 .home .main-card{
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: repeat(6, 100px);
@@ -31,7 +36,7 @@
     max-width: 900px;
     justify-self: center;
 }
-.main-card button > img{
+.main-card .button > img{
     height: 15px;
     aspect-ratio: 1 / 1;
     margin: 0 5px;
@@ -92,13 +97,20 @@
     margin: 50px 0;
     display: flex;
     height: 300px;
-    background: rgba(255, 255, 255, 0.2);
+}
+.projects .cards > .vert-break{
+    width: 5px;
+    height: 80%;
+    background: rgba(255, 255, 255, 0.25);
+    align-self: center;
+    justify-self: center;
+    margin: 0 20px;
 }
 .cards > .project-card{
     display: grid;
     grid-template-columns: 55% 45%;
     grid-template-rows: 50px 250px;
-    width: 40vw;
+    width: 35vw;
     color: #000000;
     text-decoration: none;
 }
@@ -115,7 +127,8 @@
 }
 .project-card > img{
     z-index: 1;
-    width: 90%;
+    width: 85%;
+    max-height: 90%;
     align-self: center;
     justify-self: center;
     border-radius: 5px;
@@ -125,7 +138,7 @@
 }
 .project-card > p{
     z-index: 1;
-    padding-left: 10px;
+    padding: 0 15px;
     align-self: center;
 
     grid-column: 2 / -1;
@@ -135,9 +148,12 @@
     grid-column: 1 / -1;
     grid-row: 1 / -1;
     transition: 0.2s;
+    background: rgba(255, 255, 255, 0.10);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
 }
 .project-card:hover > .background{
-    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.15) 25%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(255, 255, 255, 0) 100%);
+    background: rgba(255, 255, 255, 0.25);
+    /*background: linear-gradient(270deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.25) 25%, rgba(255, 255, 255, 0.35) 50%, rgba(255, 255, 255, 0.35) 75%, rgba(255, 255, 255, 0.25) 100%);*/
 }
 .cards > .project-link{
     flex: 1;
@@ -146,27 +162,82 @@
     text-decoration: none;
     align-content: center;
     justify-items: center;
+    background: rgba(255, 255, 255, 0.10);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+    transition: 0.2s;
 }
 .cards .project-link > h3{
+    display: block;
     font-style: normal;
     font-weight: 400;
     font-size: 1.25em;
+    padding: 10px;
+    text-align: center;
 }
 .cards > .project-link:hover{
-    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.15) 25%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(255, 255, 255, 0) 100%);
+    background: rgba(255, 255, 255, 0.25);
+}
+@media (max-width: 1000px){
+    .home > .projects{
+        margin-top: 50px;
+    }
+    .projects > h3{
+        margin-left: 10vw;
+    }
+    .projects > .break{
+        width: 90vw;
+    }
+    .projects > .cards{
+        display: block;
+        height: 800px;
+        background: none;
+        justify-self: center;
+        margin-top: 25px;
+    }
+    .cards > .project-card{
+        grid-template-columns: 45% 55%;
+        grid-template-rows: 40px 180px;
+        width: 90vw;
+        margin: 20px auto;
+        background: rgba(255, 255, 255, 0.2);
+    }
+    .cards > .project-link{
+        display: block;
+        height: 100%;
+        color: #000000;
+        text-decoration: none;
+        align-content: center;
+        justify-items: center;
+        background: rgba(255, 255, 255, 0.2);
+        height: 50px;
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .cards .project-link > h3{
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.25em;
+        margin: 0;
+    }
+    .projects .cards > .vert-break{
+        width: 90vw;
+        height: 5px;
+        margin: 20px auto;
+    }
 }
 @media (max-width: 800px){
     .home{
         margin-top: 50px;
     }
-    .home button{
+    .home .button{
         border-radius: 50px;
         width: 35vw;
         max-width: 400px;
         height: 35px;
         font-size: 0.9em;
     }
-    .home button:hover{
+    .home .button:hover{
         font-size: 0.95em;
         letter-spacing: 1px;
     }
@@ -176,7 +247,7 @@
         grid-template-rows: 100px 75px 75px 75px 100px;
         width: 90vw;
     }
-    .main-card button > img{
+    .main-card .button > img{
         height: 10px;
     }
     .main-card > .headshot{
@@ -195,46 +266,5 @@
     }
     .main-card > .more{
         grid-row: 5 / 6;
-    }
-    .home > .projects{
-        margin-top: 50px;
-    }
-    .projects > h3{
-        margin-left: 5vw;
-    }
-    .projects > .break{
-        width: 90vw;
-    }
-    .projects > .cards{
-        display: block;
-        height: 800px;
-        /* need to update background still*/
-        background: none;
-    }
-    .cards > .project-card{
-        grid-template-columns: 45% 55%;
-        grid-template-rows: 40px 180px;
-        width: 90vw;
-        margin: 20px 0;
-        background: rgba(255, 255, 255, 0.2);
-    }
-    .cards > .project-link{
-        display: block;
-        height: 100%;
-        color: #000000;
-        text-decoration: none;
-        align-content: center;
-        justify-items: center;
-        background: rgba(255, 255, 255, 0.2);
-        height: 50px;
-    }
-    .cards .project-link > h3{
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.25em;
-        margin: 0;
-    }
-    .cards > .project-link:hover{
-        background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.15) 25%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(255, 255, 255, 0) 100%);
     }
 }
