--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background-image: url('./images/background-1.png');
+  background-image: url('/images/background-1.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
