--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,142 +1,136 @@
 .contact{
-    justify-items: center;
+    min-height: 100vh;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.6) 100%);
 }
-.contact > h1{
-    font-weight: 700;
-    font-size: 3em;
-    align-items: center;
-    text-align: center;
-    margin: 30px;
+.contact > .container{
+    min-height: 90vh;
+    width: 95%;
+    justify-self: end;
+    max-width: 1000px;
+    margin-top: 20vh;
 }
-.contact > .main-card{
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
-    width: 70vw;
-    max-width: 900px;
-    justify-self: center;
-    justify-items: center;
-    margin-left: auto;
-    margin-right: auto;
+@media (min-width: 900px){
+    .contact > .container{
+        width: 100%;
+        justify-self: center;
+    }
 }
-.main-card > p{
-    font-size: 0.9em;
-    padding-top: 15px;
-    letter-spacing: 1px;
-    text-align: center;
+.contact > .container > p{
+    color: white;
+    padding: 100px 50px;
+    padding-top: 25px;
 }
-.main-card p > a {
-    font-weight: 600;
-    text-decoration: none;
-    color: black;
-    opacity: 0.5;
-    cursor: pointer;
-    transition: 0.2s;
+.contact form > div{
+    width: 100%;
+    display: flex;
+    justify-self: start;
 }
-.main-card p > a:hover{
-    opacity: 1;
-}
-.contact .main-card > form{
-    width: 80%;
-    padding: 10px 0;
-    margin-bottom: 150px;
-}
-form > div{
-    display: grid;
-    min-height: 50px;
-    grid-template-columns: 25% 75%;
-    margin-top: 50px;
-}
-form > div:nth-child(1){
-    margin-top: 15px;
-}
-form label{
-    height: 32px;
-    font-size: 1.25em;
-    line-height: 28px;
-    text-align: right;
-    align-self: start;
-    padding: 0 15px;
-    padding-top: 10px;
-}
-form input,
-form textarea,
-form button{
-    height: 45px;
-    background: rgba(255, 255, 255, 0.5);
-    border: 1px solid #000000;
-    border-radius: 20px;
-}
-form input{
-    padding-left: 20px;
-    font-size: 1em;
-    color: #000000A0;
-}
-form textarea{
-    font-family: "Roboto", sans-serif;
-    padding-left: 20px;
-    padding-top: 12px;
-    font-size: 1em;
-    color: #000000A0;
-    height: 180px;
-}
-form button{
-    margin: 20px 0;
-    cursor: pointer;
-    transition: 0.2s;
-    font-size: 1.1em;
-    color: black;
+.contact form > div > label{
+    width: 10%;
+    height: 40px;
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 400;
+    font-size: 1em;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    text-align: right;
+    color: white;
 }
-form button:hover{
-    background: rgba(255, 255, 255, 0.7);
-    font-size: 1.2em;
-    letter-spacing: 1px;
+.contact form > div > input,
+.contact form > div > textarea{
+    width: 80%;
+    margin-left: 10%;
+    height: 35px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    display: flex;
+    align-self: center;
+    background-color: #ffffff00;
+    border: none;
+    transition: 0.2s;
+    color: var(--color1);
+    outline: none;
+    padding: 0;
+    padding-left: 25px;
+    font-weight: 400;
+    color: white;
 }
-form .error{
-    margin: 0;
-    margin-left: 225px;
-    font-style: italic;
-    color: red;
+.contact form > div > textarea{
+    padding-top: 7.5px;
+    min-height: 100px;
+    resize: vertical;
 }
-form .submit-msg{
-    text-align: center;
-    font-size: 2em;
-    font-weight: 600;
+.contact form > div > input::placeholder,
+.contact form > div > textarea::placeholder{
+    color: white;
 }
-form .submit-error{
-    text-align: center;
-    font-size: 2em;
-    font-weight: 600;
-    color: red;
+.contact form > div > input:focus,
+.contact form > div > textarea:focus{
+    background-color: #ffffff;
+    color: var(--color1);
+    
 }
-@media (max-width: 800px){
-    .contact > h1{
-        font-size: 2em;
+.contact form > .break{
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    margin: 2px 0;
+}
+.contact form > .submit{
+    display: flex;
+    justify-content: end;
+    margin-top: 50px;
+    width: 100%;
+}
+.contact form > .submit > button{
+    height: 40px;
+    min-width: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    color: var(--color1);
+    font-weight: 500;
+    font-size: 1em;
+    border-radius: 0;
+    background-color: white;
+    cursor: pointer;
+    outline: none;
+    transition: background-color 0.2s;
+    border: solid #FFFFFF00 2px;
+}
+.contact form > .submit > button:hover,
+.contact form > .submit > button:focus{
+    font-size: 1.1em;
+    border: solid black 2px;
+}
+
+
+@media (max-width: 750px){
+    .contact > .container > p{
+        color: white;
+        padding: 50px 25px;
+        padding-top: 25px;
     }
-    .contact > .main-card{
-        width: 90vw;
+    .contact form {
+        width: 100%;
     }
-    .main-card > p{
-        font-size: 0.85em;
-    }
-    .contact .main-card > form{
-        width: 95%;
-        padding: 25px 0;
-        margin-bottom: 150px;
-    }
-    form > div{
-        grid-template-columns: 30% 70%;
-    }
-    form label{
-        font-size: 1.1em;
-    }
-    form input{
+    .contact form > div > label{
+        width: 25%;
         font-size: 0.9em;
-    }
-    form textarea{
+        font-weight: 900;
+    } 
+    .contact form > div > input,
+    .contact form > div > textarea{
+        font-weight: 400;
         font-size: 0.9em;
-    }
-    form .error{
-        margin-left: 30vw;
+        line-height: 19px;
+        padding-left: 15px;
     }
 }
