--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 :root{
   --color1: #3550C8;
@@ -9,4 +10,32 @@ html, body {
   padding: 0;
   background-color: var(--color1);
   font-family: "Roboto", sans-serif;
+}
+h1{
+  min-height: 50px;
+  margin: 0;
+  font-weight: 900;
+  font-size: 2.5em;
+  color: #FFFFFF;
+  display: flex;
+  align-items: center;
+}
+h2{
+  min-height: 50px;
+  margin: 0;
+  font-weight: 900;
+  font-size: 2em;
+  line-height: 38px;
+  display: flex;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+@media (max-width: 750px){
+  h1{
+    font-size: 1.5em;
+  }
+  p{
+    font-size: 0.85em;
+  }
 }
