--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,7 +2,7 @@
     margin-top: 60px;
     width: 100vw;
     justify-self: center;
-    background: linear-gradient(180deg, white 25%, rgba(255, 255, 255, 0.25) 100%);
+    background: linear-gradient(180deg, #FFFFFF 25%, rgba(255, 255, 255, 0.25) 75%, rgba(255, 255, 255, 0) 100%);
 }
 .home > .content{
     justify-self: center;
@@ -10,7 +10,6 @@
     min-height: 100vh;
     width: 100vw;
     max-width: 1600px;
-    margin-bottom: 20vh;
 }
 .home > .content > .title{
     min-height: 50px;
@@ -23,41 +22,72 @@
 }
 .home .main{
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-around;
     align-items: center;
+}
+.home .main div > p{
+    font-weight: 400;
+    font-size: 1.2em;
+    line-height: 30px;
+    align-items: center;
+    color: #000000;
+    width: 50vw;
+    max-width: 800px;
 }
 .home .main > img{
     width: 40vw;
     max-width: 500px;
 }
-.home .content  > .learn-more > .arrow-icon{
+.home > .content .learn-more{
+    border: solid var(--color1) 2px;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin: 5px 25px;
+    display: flex;
+    align-items: center;
+    justify-self: start;
+    height: 30px;
+    background-color: rgba(53, 80, 200, 0.05);
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    transition: 0.2s;
+}
+.home > .content .learn-more > .arrow-icon{
     rotate: 90deg;
     margin-left: 15px;
 } 
-.home .content  > .learn-more{
-    display: flex;
-    cursor: pointer;
-    justify-self: center;
-    align-items: center;
-    height: 30px;
-    border-radius: 5px;
-    border: solid white 1px;
-    padding: 0 10px;
-    text-decoration: none;
-    color: white;
-    background-color: rgba(53, 80, 200, 0.5);
-    position: relative;
-    margin: auto;
-    max-width: fit-content;
-    margin-top: 100px;
-    transition: 0.1s;
-}
-.home .content > .learn-more:hover{
-    background-color: rgba(53, 80, 200, 0.75);
+.home > .content .learn-more:hover{
+    scale: 1.025;
 }
 @media (max-width: 750px){
     .home .main{
         flex-direction: column;
         justify-content: center;
+    }
+    .home > .content > h2{
+        font-size: 1.5em;
+    }
+    .home > .content > .title{
+        min-height: 50px;
+        font-size: 1.85em;
+        line-height: 35px;
+        padding-left: 25px;
+        margin-bottom: 15px;
+        margin-right: 15px;
+    }
+    .home .main > img{
+        width: 70vw;
+    }
+    .home .main div > p{
+        font-size: 1em;
+        line-height: 24px;
+        width: 85vw;
+    }
+    .home > .content .learn-more{
+        justify-self: center;
+        justify-content: center;
+        width: 50vw;
+        margin: 5px auto;
     }
 }
