--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -199,19 +199,19 @@
 .project-moreinfo .head > .website-link > svg{
     scale: 1.1;
 }
-.project-moreinfo > .show-video{
-    display: block;
+.project-moreinfo > video{
+    display: none;
     width: 100%;
 }
-.project-moreinfo > .hide-video{
-    display: none;
-}
 .project-moreinfo > .loading{
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     overflow-y: hidden;
     min-height: 45vh;
-    align-content: center;
     color: white;
+    margin: auto;
 }
 .project-moreinfo > p{
     font-weight: 300;
